fixed horizontal scrollbar

--- a/client/src/components/nav/styles/nav.scss
+++ b/client/src/components/nav/styles/nav.scss
@@ -21,7 +21,7 @@
     color: white;
 
     .logo {
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        box-shadow: 0 0px 8px 0 rgba(0,0,0,0.2);
         opacity: .9;
         font-family: 'Allerta', ;
         background-color: rgb(47,70,114);
