--- a/client/src/views/categories/styles/categories.scss
+++ b/client/src/views/categories/styles/categories.scss
@@ -7,5 +7,4 @@
 .categories-container {
     width: 100%;
     min-height: 800px;
-    border: 1px solid lightblue;
 }
